--- a/Vidly/Vidly.WebApi/appsettings.Development.json
+++ b/Vidly/Vidly.WebApi/appsettings.Development.json
@@ -4,5 +4,6 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "MyKey": "appsettings.development.json"
 }
