--- a/Clase 3/Vidly.WebApi/appsettings.Development.json
+++ b/Clase 3/Vidly.WebApi/appsettings.Development.json
@@ -1,9 +1,5 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "MyKey": "appsettings.development.json"
+  "ConnectionStrings": {
+    "Vidly": "Server=localhost;Database=Vidly; Integrated Security=True;Trusted_Connection=True;MultipleActiveResultSets=True;TrustServerCertificate=True"
+  }
 }
