--- a/Clase 1/Vidly.WebApi/appsettings.Development.json
+++ b/Clase 1/Vidly.WebApi/appsettings.Development.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "Vidly": ""
+    "Vidly": "Server=localhost;Database=Vidly; Integrated Security=True;Trusted_Connection=True;MultipleActiveResultSets=True;TrustServerCertificate=True"
   }
 }
