--- a/Clase 2/Vidly.WebApi/appsettings.json
+++ b/Clase 2/Vidly.WebApi/appsettings.json
@@ -1,10 +1,5 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*",
-  "MyKey": "appsettings.json"
+  "ConnectionStrings": {
+    "Vidly": ""
+  }
 }
