--- a/1- Inicios MSTest/Vidly.WebApi/Vidly.WebApi.csproj
+++ b/1- Inicios MSTest/Vidly.WebApi/Vidly.WebApi.csproj
@@ -8,7 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Services\" />
+    <Compile Remove="Services\**" />
+    <Content Remove="Services\**" />
+    <EmbeddedResource Remove="Services\**" />
+    <None Remove="Services\**" />
   </ItemGroup>
 
 </Project>
