--- a/1- Angular application/MyComponentApp/angular.json
+++ b/1- Angular application/MyComponentApp/angular.json
@@ -7,10 +7,10 @@
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
-          "inlineTemplate": true,
+          "inlineTemplate": false,
           "inlineStyle": true,
           "skipTests": true,
-          "standalone": false
+          "standalone": true
         },
         "@schematics/angular:class": {
           "skipTests": true
