--- a/1- Angular application/MyAngularMaterialApp/angular.json
+++ b/1- Angular application/MyAngularMaterialApp/angular.json
@@ -56,10 +56,9 @@
             ],
             "styles": [
               "@angular/material/prebuilt-themes/azure-blue.css",
-              "src/styles.css",
-              "node_modules/bootstrap/dist/css/bootstrap.min.css"
+              "src/styles.css"
             ],
-            "scripts": ["node_modules/jquery/dist/jquery.min.js"]
+            "scripts": []
           },
           "configurations": {
             "production": {
