--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # Build Folders (you can keep bin if you'd like, to store dlls and pdbs)
 [Bb]in/
 [Oo]bj/
+node_modules
+.angular
 .env
 # mstest test results
 TestResults
