--- a/.editorconfig
+++ b/.editorconfig
@@ -229,6 +229,7 @@ dotnet_diagnostic.CA1303.severity = None
 
 #### The variable 'variable' is assigned but its value is never used (https://learn.microsoft.com/en-us/dotnet/csharp/misc/cs0219?f1url=%3FappId%3Droslyn%26k%3Dk(CS0219)) #####
 dotnet_diagnostic.IDE0059.severity = Error
+dotnet_diagnostic.IDE0051.severity = Error
 dotnet_diagnostic.CS0219.severity = None
 
 #### A type that's not accessible outside its assembly and has no subtypes within its containing assembly is not marked sealed (https://learn.microsoft.com/en-us/dotnet/fundamentals/code-analysis/quality-rules/ca1852) #####
@@ -248,6 +249,7 @@ dotnet_diagnostic.CS8618.severity = Error
 dotnet_diagnostic.CS9113.severity = Error
 dotnet_diagnostic.CS1998.severity = Error
 dotnet_diagnostic.CS8604.severity = Error
+dotnet_diagnostic.CS0168.severity = Error
 
 
 
