--- a/.editorconfig
+++ b/.editorconfig
@@ -101,9 +101,9 @@ dotnet_diagnostic.SA1205.severity = Warning
 dotnet_diagnostic.SA1206.severity = Silent
 dotnet_diagnostic.SA1207.severity = Warning
 dotnet_diagnostic.SA1208.severity = Warning
-dotnet_diagnostic.SA1209.severity = Warning
-dotnet_diagnostic.SA1210.severity = Warning
-dotnet_diagnostic.SA1211.severity = Warning
+dotnet_diagnostic.SA1209.severity = error
+dotnet_diagnostic.SA1210.severity = error
+dotnet_diagnostic.SA1211.severity = error
 dotnet_diagnostic.SA1212.severity = Warning
 dotnet_diagnostic.SA1213.severity = Warning
 dotnet_diagnostic.SA1214.severity = Silent
@@ -230,6 +230,7 @@ dotnet_diagnostic.CA1303.severity = None
 #### The variable 'variable' is assigned but its value is never used (https://learn.microsoft.com/en-us/dotnet/csharp/misc/cs0219?f1url=%3FappId%3Droslyn%26k%3Dk(CS0219)) #####
 dotnet_diagnostic.IDE0059.severity = Error
 dotnet_diagnostic.IDE0051.severity = Error
+dotnet_diagnostic.IDE0005.severity = Error
 dotnet_diagnostic.CS0219.severity = None
 
 #### A type that's not accessible outside its assembly and has no subtypes within its containing assembly is not marked sealed (https://learn.microsoft.com/en-us/dotnet/fundamentals/code-analysis/quality-rules/ca1852) #####
@@ -343,11 +344,11 @@ csharp_preferred_modifier_order = public,private,protected,internal,file,static,
 csharp_style_prefer_readonly_struct = true:suggestion
 
 # Code-block preferences
-csharp_prefer_braces = true:silent
-csharp_prefer_simple_using_statement = true:suggestion
+csharp_prefer_braces = true:error
+csharp_prefer_simple_using_statement = true:error
 csharp_style_namespace_declarations = file_scoped:error
-csharp_style_prefer_method_group_conversion = true:silent
-csharp_style_prefer_top_level_statements = true:silent
+csharp_style_prefer_method_group_conversion = true:error
+csharp_style_prefer_top_level_statements = true:error
 
 # Expression-level preferences
 csharp_prefer_simple_default_expression = true:suggestion
@@ -521,3 +522,4 @@ dotnet_diagnostic.CA1828.severity = error
 dotnet_diagnostic.CA1829.severity = error
 dotnet_diagnostic.CA1724.severity = error
 insert_final_newline = true
+dotnet_diagnostic.CA2249.severity = error
