--- a/2- Moq Service/Vidly.BusinessLogic.Test/Vidly.BusinessLogic.Test.csproj
+++ b/2- Moq Service/Vidly.BusinessLogic.Test/Vidly.BusinessLogic.Test.csproj
@@ -19,7 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Vidly.WebApi\Vidly.WebApi.csproj" />
+    <ProjectReference Include="..\Vidly.BusinessLogic\Vidly.BusinessLogic.csproj" />
   </ItemGroup>
 
   <ItemGroup>
