--- a/.editorconfig
+++ b/.editorconfig
@@ -44,7 +44,7 @@ dotnet_diagnostic.SA1020.severity = Warning
 dotnet_diagnostic.SA1021.severity = Warning
 dotnet_diagnostic.SA1022.severity = Warning
 dotnet_diagnostic.SA1023.severity = Warning
-dotnet_diagnostic.SA1024.severity = Warning
+dotnet_diagnostic.SA1024.severity = Error
 dotnet_diagnostic.SA1025.severity = Warning
 dotnet_diagnostic.SA1026.severity = Warning
 dotnet_diagnostic.SA1027.severity = Silent
@@ -79,7 +79,7 @@ dotnet_diagnostic.SA1125.severity = Warning
 dotnet_diagnostic.SA1126.severity = None
 dotnet_diagnostic.SA1127.severity = Warning
 dotnet_diagnostic.SA1128.severity = error
-dotnet_diagnostic.SA1129.severity = Warning
+dotnet_diagnostic.SA1129.severity = Error
 dotnet_diagnostic.SA1130.severity = Warning
 dotnet_diagnostic.SA1131.severity = Warning
 dotnet_diagnostic.SA1132.severity = Warning
