--- a/.github/workflows/code-analysis.yml
+++ b/.github/workflows/code-analysis.yml
@@ -26,7 +26,7 @@ jobs:
       run: dotnet format --verify-no-changes --verbosity diagnostic --report ./analysis
 
     - name: Upload code analysis report
-      continue-on-error: true
+      if: always()
       uses: actions/upload-artifact@v4
       with:
         name: Code Analysis Report
