--- a/1- Angular application/MyComponentApp/angular.json
+++ b/1- Angular application/MyComponentApp/angular.json
@@ -10,7 +10,7 @@
           "inlineTemplate": false,
           "inlineStyle": true,
           "skipTests": true,
-          "standalone": true
+          "standalone": false
         },
         "@schematics/angular:class": {
           "skipTests": true
